feat(ops): optimize deployment scripts & grant documentation